--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  form(action="/join-session", method="get") 
+  form(action="/vote-on-debate", method="get") 
     p
       input(type="text", placeholder="What's the room code?", name="sessionCode")
     p
