--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,13 +18,17 @@ a {
 	width: 100%;
 }
 
+#currentVote {
+	padding: 50px;
+	margin: 5% 10% 5% 10%;
+}
+
 #voteForA {
 	padding: 50px;
 	border: 3px outset;
 	background-color: #00B7FF;
 	color: #000;
-	float:left;
-	margin-right: 50px;
+	margin: 5% 10% 5% 10%;
 	cursor: pointer;
 }
 
@@ -33,7 +37,7 @@ a {
 	border: 3px outset;
 	background-color: #ff0000;
 	color: #000;
-	float:left;
+	margin: 5% 10% 5% 10%;
 	cursor: pointer;
 }
 
@@ -42,8 +46,7 @@ a {
 	border: 3px outset;
 	background-color: #666;	
 	color: #000;
-	float:left;
-	margin-right: 50px;
+	margin: 5% 10% 5% 10%;
 	cursor: pointer;
 }
 
