--- a/views/moderate-debate.jade
+++ b/views/moderate-debate.jade
@@ -2,22 +2,23 @@ extends layout
 
 block content
   #page
-    #content
-      h1 Debate: #{title} 
-    p= topic
-    p= duration
-
-    #code
-      p Participants
-      ul
-        li= participantA
-        li= participantB
-
     #audience
-      p Audience code is #{audienceCode}
+      p Join the fun at 
+        span#joinLocation ... 
+        span and enter code 
+          span#audienceCode #{audienceCode}
       ul
         each user in audience
           li= user
+
+    #content
+      h1 #{title} 
+
+    #code
+      p Opinions
+      ul
+        li= participantA
+        li= participantB
 
     #startDebate Start Debating
 
