--- a/views/moderate-debate.jade
+++ b/views/moderate-debate.jade
@@ -26,5 +26,5 @@ block content
 
     #chart
 
-  script(src="https://d3js.org/d3.v4.min.js")
+  script(src="https://aframe.io/releases/0.8.2/aframe.min.js")
   script(src="/javascripts/moderate-debate.js")
