--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,5 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
+    script(src="https://aframe.io/releases/0.8.2/aframe.min.js")
   body
     block content
