--- a/views/create-debate.jade
+++ b/views/create-debate.jade
@@ -4,7 +4,7 @@ block content
 	#content.container(style='text-align:center')
 		form(action='/create-debate', method='post')
 			.row
-				h1.twelve.columns What are we talking about?
+				h3.twelve.columns What are we talking about?
 
 			.row
 				.twelve.columns
@@ -22,10 +22,8 @@ block content
 				br
 
 			.row
-				.five.columns
-					span(style='visibility:hidden') -
-				.one.columns
-					select(name='duration', style='color:#000')
+				.twelve.columns 
+					select(name='duration', style='margin-bottom:0em;')
 						option(value='2') 2
 						option(value='3') 3
 						option(value='4') 4
@@ -35,10 +33,7 @@ block content
 						option(value='12') 12
 						option(value='15') 15
 						option(value='20') 20
-				.four.columns 
-					h4(style='text-align:left') Minutes
-				.two.columns 
-					span(style='visibility:hidden') -
+					span(style='text-align:left;font-size:2em')  Minutes
 
 			hr
 
