effects are done for the winner. need to fix the chart not initializing correctly if there is no audience, or sometimes requiring a page reload to show up.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,3 +29,40 @@ input, select {
 	font-size:2em;
 	line-height:0em;
 }
+
+
+
+
+
+
+
+
+
+
+
+body {
+	margin: 0;
+	overflow: hidden;
+  }
+  
+  .wrapper {
+	position: relative;
+	min-height: 100vh;
+  }
+  
+  [class|="confetti"] {
+	position: absolute;
+  }
+  
+  .red {
+	background-color: #E94A3F;
+  }
+  
+  .yellow {
+	background-color: #FAA040;
+  }
+  
+  .blue {
+	background-color: #5FC9F5;
+  }
+  
