--- a/views/moderate-debate.jade
+++ b/views/moderate-debate.jade
@@ -34,8 +34,8 @@ block content
 			.nine.columns
 				#chart
 			.three.columns
-				ul#audience.pull-left
+				ul#audience
 					each user in audience
-						li.pull-left= user
+						li= user
 
 	script(src="/javascripts/moderate-debate.js")
