--- a/views/create-debate.jade
+++ b/views/create-debate.jade
@@ -24,6 +24,7 @@ block content
 			.row
 				.twelve.columns 
 					select(name='duration', style='margin-bottom:0em;')
+						option(value='1') 1
 						option(value='2') 2
 						option(value='3') 3
 						option(value='4') 4
