forgot to add the assets required for confetti

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -23,6 +23,7 @@ html
 		script(src='//cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js')
 		script(src='//cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/easing/EasePack.min.js')
 		script(src='/javascripts/confetti.js')
+		//- script(src='/javascripts/jsfx.js')
 
 	body
 		.wrapper
