Fixed a bug happening because there was ambiguity around voter vs moderator and the logic was written for the session handling as a more POC assumption of never having more than one debate going by one person at a time. Now there can be many different debates by many different people as both voters or moderators, but you cannot be a voter on your own debate (same browser).

--- a/views/create-debate.jade
+++ b/views/create-debate.jade
@@ -8,15 +8,15 @@ block content
 
 			.row
 				.twelve.columns
-					input.u-full-width(type='text', placeholder='Topic', name='topic')
+					input.u-full-width(type='text', placeholder='Topic', autocomplete='off', name='topic')
 
 			.row
 				.five.columns
-					input.u-full-width(type='text', placeholder='Opinion A', name='participantA')
+					input.u-full-width(type='text', placeholder='Opinion A', autocomplete='off', name='participantA')
 				.two.columns 
 					h4 vs
 				.five.columns
-					input.u-full-width(type='text', placeholder='Opinion B', name='participantB')
+					input.u-full-width(type='text', placeholder='Opinion B', autocomplete='off', name='participantB')
 
 			.row
 				br
