--- a/views/vote-on-debate.jade
+++ b/views/vote-on-debate.jade
@@ -3,6 +3,8 @@ extends layout
 block content
 
 	#page
+		#sessionCode.hidden #{sessionCode}
+		
 		h3#sessionIsPending.hidden 
 			span The debate will begin shortly. 
 			br
